Navbar and styling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
   <div>
     <h2>Create meaningful connections.</h2>
     <p>Focused conversations. No more one-time talk.</p>
-    <img src="../public/fogg-success-1.png" />
+    <img src="fogg-success-1.png" />
     <div>
       <h3>Introduce</h3>
       <p>
