--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,24 +1,34 @@
-footer{
-  background-color: #9FA8DA;
-  color: #fff;
+#header-hr{
+  transform: translateY(-30px);
 }
- 
- /* Stackoverflow preview fix, please ignore */
-  .navbar-nav {
-    flex-direction: row;
-  }
-  
-  .nav-link {
-    padding-right: .5rem !important;
-    padding-left: .5rem !important;
-  }
-  
-  /* Fixes dropdown menus placed on the right side */
-  .ml-auto .dropdown-menu {
-    left: auto !important;
-    right: 0px;
-  }
 
+ 
+/* NAVBAR */
+.mint-btn{
+  background-color: #61C9A8;
+}
+.navbar-nav {
+  flex-direction: row;
+}
+
+.nav-link {
+  padding-right: .5rem !important;
+  padding-left: .5rem !important;
+}
+
+/* Fixes dropdown menus placed on the right side */
+.ml-auto .dropdown-menu {
+  left: auto !important;
+  right: 0px;
+}
+.nav-item{
+  padding: 1.5rem;
+}
+.not-nav-button{
+  transform: translateY(10px);
+}
+
+/* LANDING PAGE */
   #transform {
     text-align: center;
 
@@ -35,4 +45,12 @@ footer{
 
 .br-18 {
     border-radius: 18px;
+}
+
+/* MENTOR SECTION */
+.mentor-card{
+  background: #F5FFFD;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 15px;
 }
