--- a/views/mentee.ejs
+++ b/views/mentee.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") -%>
 
     <div class="m-3">
-        <h1>Mentee Page</h1>
+        <h1>Meet the Mentees</h1>
     </div>
 
 <%- include("partials/footer") -%>
